--- a/Pages/Container.razor
+++ b/Pages/Container.razor
@@ -10,6 +10,5 @@
 	[Parameter]
 	public RenderFragment? ChildContent { get; set; }
 
-	public Type Payload { get; set; }
-	public DragInformation PayloadComponent { get; set; }
+	public DragInformation? Payload { get; set; }
 }
