--- a/Pages/ComponentList.razor
+++ b/Pages/ComponentList.razor
@@ -40,7 +40,8 @@
 				ComponentType = componentType,
 				Parameters = new Dictionary<string, object>()
 				{
-					{ "DesignMode", true }
+					{ "Id", Guid.NewGuid() },
+					{ "DesignMode", true },
 				}
 			};
 	}
