--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 @using LayoutDesigner.Components
 
-	<VerticalPanel></VerticalPanel>
+	<Selectable HideSelection>
+		<VerticalPanel></VerticalPanel>
+	</Selectable>
 
 @code {
 
