--- a/Pages/Container.razor
+++ b/Pages/Container.razor
@@ -1,4 +1,5 @@
-﻿@using LayoutDesigner.Interfaces
+﻿@using LayoutDesigner.Components
+@using LayoutDesigner.Interfaces
 @using LayoutDesigner.Models
 <div class="container">
 	<CascadingValue Value="this">
@@ -10,11 +11,21 @@
 	[Parameter]
 	public RenderFragment? ChildContent { get; set; }
 
-	public DragInformation? Payload { get; set; }
+	public LayoutControlData? Payload { get; set; }
+
+	public LayoutControlData Root { get; set; }
 
 	public Guid SelectedId { get; private set; } = Guid.Empty;
 	public event Action<Guid>? SelectionChanged;
 
+	public Container()
+	{
+		Root = new LayoutControlData()
+			{
+				Type = typeof(VerticalPanel),
+				Selectable = false,
+			};
+	}
 	public void Select(Guid id)
 	{
 		SelectedId = id;
