--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,10 +1,8 @@
 ﻿@page "/"
 @using LayoutDesigner.Components
 
-	<Selectable HideSelection>
-		<VerticalPanel></VerticalPanel>
-	</Selectable>
+<LayoutControl Data="Container?.Root"></LayoutControl>
 
 @code {
-
+	[CascadingParameter] public Container? Container { get; set; }
 }
