Still not working as I want it

--- a/Components/AlphaNumeric.razor
+++ b/Components/AlphaNumeric.razor
@@ -9,7 +9,7 @@
 	<MudCardContent>
 		@if (!PreviewMode)
 		{
-			<MudTextField @bind-Value="@Value" Required="true" />
+			<MudTextField @bind-Value="Value" Required="true" />
 		}
 		else
 		{
