--- a/MainLayout.razor
+++ b/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@using LayoutDesigner.Pages
+﻿@using LayoutDesigner.Models
+@using LayoutDesigner.Pages
 @implements IDisposable
 @inherits LayoutComponentBase
 <MudThemeProvider />
@@ -46,9 +47,9 @@
 			Container.SelectionChanged -= OnSelectionChanged;
 	}
 
-	private void OnSelectionChanged(Guid id)
+	private void OnSelectionChanged(LayoutControlData? selectedData)
 	{
-		_isComponentSelected = id != Guid.Empty;
+		_isComponentSelected = selectedData != null;
 		StateHasChanged();
 	}
 }
