--- a/Pages/ComponentList.razor
+++ b/Pages/ComponentList.razor
@@ -1,4 +1,5 @@
 @using System.Reflection
+@using LayoutDesigner.Components
 @using LayoutDesigner.Interfaces
 @using LayoutDesigner.Models
 <ul class="component-list">
@@ -16,7 +17,28 @@
 	<li class="component-label">@(component.Name)</li>
 }
 </ul>
-
+<ul class="properties-list">
+	@if (Container?.Selection != null)
+	{
+		@foreach (var kvp in GetProperties())
+		{
+			<li>
+				@if (kvp.Type == typeof(string))
+				{
+					<MudTextField T="string" Label="@kvp.Name" Value="(string)kvp.Value" ValueChanged="args => OnValueChanged(kvp.Item1, args)"></MudTextField>
+				}
+				else if (kvp.Type == typeof(double))
+				{
+					<MudTextField T="double" Label="@kvp.Name" Value="(double)kvp.Value"  @onchange="args => OnValueChanged(kvp.Item1, args)"></MudTextField>
+				}
+				else if (kvp.Type == typeof(bool))
+				{
+					<MudCheckBox Label="@kvp.Name" Value="(bool)kvp.Value" @onchange="args => OnValueChanged(kvp.Item1, args)"></MudCheckBox>
+				}
+			</li>
+		}
+	}
+</ul>
 @code {
 
 	[CascadingParameter] Container? Container { get; set; }
@@ -47,5 +69,33 @@
 				Selectable = true,
 				IsContainer = isContainer
 			};
+
+		LayoutComponent component = (LayoutComponent)Activator.CreateInstance(componentType);
+		foreach (var property in component.GetProperties())
+			Container.Payload.Parameters.Add(property.Name, property.Value);
+	}
+
+	private IEnumerable<(string Name, object Value, Type Type)> GetProperties()
+	{
+		List<(string, object, Type)> result = new List<(string, object, Type)>();
+		if (Container?.Selection != null)
+		{
+			var properties = Container.Selection.Type.GetProperties(BindingFlags.Public | BindingFlags.Instance | BindingFlags.DeclaredOnly);
+			foreach (var property in properties)
+			{
+				if (Container.Selection.Parameters.ContainsKey(property.Name))
+					result.Add((property.Name, Container.Selection.Parameters[property.Name], property.PropertyType));
+			}
+		}
+		return result;
+	}
+
+	private void OnValueChanged<T>(string key, T value)
+	{
+		if (Container?.Selection != null)
+		{
+			Container.Selection.Parameters[key] = value;
+			Container.NotifyStateChanged(Container.Selection);
+		}
 	}
 }
