--- a/Components/HorizontalPanel.razor
+++ b/Components/HorizontalPanel.razor
@@ -4,8 +4,7 @@
 @implements ILayoutComponent
 @implements IDropAreaContainer
 
-<DropArea StyleClass="drop-area-horizontal" PreviewMode="PreviewMode" DesignMode="DesignMode" @ref="DropArea"></DropArea>
+<DropArea StyleClass="drop-area-horizontal" PreviewMode="PreviewMode" DesignMode="DesignMode"></DropArea>
 
 @code {
-	public DropArea? DropArea { get; private set; }
 }
