--- a/Pages/Container.razor
+++ b/Pages/Container.razor
@@ -35,6 +35,10 @@
 			SelectionChanged?.Invoke(selectedData);
 		}
 	}
+	public void ClearSelection()
+	{
+		Select(null);
+	}
 
 	public void DeleteSelectedComponent()
 	{
